# arr-backup

./: .build.yml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  renovate.json
.builds/: docker.yml  rust.yml
.github/: renovate.js
.github/workflows/: docker.yaml  release.yml  renovate.yml  rust.yml
src/: config.rs  main.rs
src/client/: backup.rs  mod.rs
